chatops/rocket_chat/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rocketchat-service
  labels:
    app: rocketchat
    tier: frontend
spec:
  ports:
    - name: webui
      port: 3000
      targetPort: http
      nodePort: 38080
      protocol: TCP
  type: NodePort
  selector:
    app: rocketchat
    tier: frontend
